--- a/app/globals.css
+++ b/app/globals.css
@@ -2,30 +2,31 @@
 @tailwind components;
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Bellefair&family=Poppins&display=swap');
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+
+* {
+  color: rgb(255,255,255);
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+p {
+  color: #f0f0f0;
 }
 
 .font-poppins{
   font-family: 'Poppins', sans-serif;
+}
+
+@font-face {
+  font-family: "Lapis";
+  src: url("../public/fonts/lapsus-pro.bold.otf");
+}
+
+.polka {
+  background-image: 
+    radial-gradient(rgba(255, 255, 255, 0.025) 10%, transparent 11.6%),
+    radial-gradient(rgba(255, 255, 255, 0.025) 10%, transparent 11.6%);
+  background-position: 0px 0px, 16px 16px;
+  background-size: 32px 32px;
 }
