--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,12 @@
   transition-duration: 150ms;
 }
 
+html {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 p {
   color: #f0f0f0;
 }
